static/routebuilder.css
.index {
    text-align: center;
}

.index div {
    vertical-align: middle;
    text-align: center;
    overflow:hidden;
    margin: 20px;
    max-height: 180px;
}

.index img {
    height: 160px;
    overflow:hidden;
}

.index p {
    font-size: 12pt;
    font-weight: bold;
}



.about {
    text-align: center;
}

.about > div {
    vertical-align: middle;
    padding: 20px;
    height: 240px;
}

.about img {
    max-height: 70%;
    max-width:  100%;
}

.about h2 {
    font-size: 14pt;
    font-weight: bold;
}

.about p {
    font-size: 12pt;
}



.route_summary li input {
    margin: 10px 20px 10px 20px;
}

.route_summary li a {
    font-weight: bold
}


h1 {
    font-size: 24px;
}


.map-frame{
    position: absolute;
    padding: 16px;
    margin-bottom: 400px;
    display: block;
    width: 100%;
    height: 400px;
}

#map {
    width: 100%;
    height: 400px;
}


input.ng-dirty.ng-valid {
    border-color: green;
}

input.ng-dirty.ng-invalid {
    border-color: red;
}

